# cs142-project

./: .gitignore  README.md  mypy.ini  pyproject.toml  pytest.ini
src/: base.py  fakes.py  gui.py  strands.py  stubs.py  tui.py
src/finals/: __init__.py  board.py  pos.py  strand.py  strandsgame.py
src/gui_files/: container.py  gui.py  settings.py  sprites.py  text.py
src/m1/: __init__.py  boardfake.py  strandfake.py  strandsgamefake.py
src/m2/: __init__.py
tests/: test_strands.py
